--- a/.github/workflows/cd_backend.yml
+++ b/.github/workflows/cd_backend.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Build and Push Docker Image
         uses: docker/build-push-action@v4
         with:
-          context: .
-          file: ./backend.Dockerfile
+          context: .                 
+          file: docker/backend.Dockerfile   
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/wubble-backend:${{ github.sha }},${{ secrets.DOCKERHUB_USERNAME }}/wubble-backend:latest
