--- a/.github/workflows/cd_frontend.yml
+++ b/.github/workflows/cd_frontend.yml
@@ -22,6 +22,6 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           context: .
-          file: ./frontend.Dockerfile
+          file: docker/backend.Dockerfile 
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/wubble-frontend:${{ github.sha }},${{ secrets.DOCKERHUB_USERNAME }}/wubble-frontend:latest
