--- a/package.json
+++ b/package.json
@@ -11,18 +11,19 @@
     "server": "node server/index.js"
   },
   "dependencies": {
+    "axios": "^1.6.2",
+    "canvas-confetti": "^1.9.2",
+    "concurrently": "^8.2.2",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "zustand": "^4.4.7",
-    "axios": "^1.6.2",
-    "express": "^4.18.2",
-    "cors": "^2.8.5",
-    "concurrently": "^8.2.2",
-    "canvas-confetti": "^1.9.2"
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
+    "@types/canvas-confetti": "^1.9.0",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
